<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:padding="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="600dp">

        <TextView
            android:id="@+id/category_cuisine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/category_cuisine"
            android:textAppearance="@style/PrimaryText"
            app:layout_constraintBottom_toTopOf="@+id/card_cuisine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_cuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_cuisine">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linear1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linear2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <CheckBox
                        android:id="@+id/box_italian"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/cuisine_italian" />

                    <CheckBox
                        android:id="@+id/box_greek"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:text="@string/cuisine_greek" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linear6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear1">

                    <CheckBox
                        android:id="@+id/box_japanese"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/cuisine_japanese" />

                    <CheckBox
                        android:id="@+id/box_chinese"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/cuisine_chinese" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear2">

                    <CheckBox
                        android:id="@+id/box_mexican"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/cuisine_mexican" />

                    <CheckBox
                        android:id="@+id/box_other"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/cuisine_other" />

                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/cuisine_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/cuisine_new"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/category_dishes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_cuisine" />

        <TextView
            android:id="@+id/category_dishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/nav_dishes"
            android:textAppearance="@style/PrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cuisine_new" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_dishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toBottomOf="@id/category_dishes">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linear4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <CheckBox
                        android:id="@+id/box_pizza"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/dish_pizza" />

                    <CheckBox
                        android:id="@+id/box_sandwich"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/dish_sandwich" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linear5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear3">

                    <CheckBox
                        android:id="@+id/box_hamburger"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/dish_hamburger" />

                    <CheckBox
                        android:id="@+id/box_tacos"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/dish_tacos" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/linear7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear4">

                    <CheckBox
                        android:id="@+id/box_starter"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/dish_starter" />

                    <CheckBox
                        android:id="@+id/box_meat"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/dish_meat" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear5">

                    <CheckBox
                        android:id="@+id/box_sushi"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/dish_sushi" />

                    <CheckBox
                        android:id="@+id/box_otherdish"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/dish_others" />

                </LinearLayout>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <EditText
            android:id="@+id/dishes_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/dish_new"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_dishes" />

        <TextView
            android:id="@+id/category_pricerange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/category_price"
            android:textAppearance="@style/PrimaryText"
            app:layout_constraintBottom_toTopOf="@+id/card_pricerange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dishes_new" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_pricerange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/category_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_pricerange">

            <RadioGroup
                android:id="@+id/group_pricerange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_cheap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="€" />

                <RadioButton
                    android:id="@+id/radio_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="€€" />

                <RadioButton
                    android:id="@+id/radio_expensive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="€€€" />
            </RadioGroup>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/category_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttons"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:text="@string/save"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_pricerange" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>