<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorBackground"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/profile_sample" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/profile_name"
        android:textAppearance="@style/PrimaryText" />

    <TextView
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nullText"
        android:textAppearance="@style/SecondaryText" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_email"
        android:textAppearance="@style/PrimaryText" />

    <TextView
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_email"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nullText"
        android:textAppearance="@style/SecondaryText" />

    <TextView
        android:id="@+id/profile_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_desc"
        android:textAppearance="@style/PrimaryText" />

    <TextView
        android:id="@+id/editText_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_desc"
        android:text="@string/nullText"
        android:textAppearance="@style/SecondaryText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/profile_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_desc"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_address"
        android:textAppearance="@style/PrimaryText" />

    <TextView
        android:id="@+id/editText_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_address"
        android:text="@string/nullText"
        android:textAppearance="@style/SecondaryText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />
</RelativeLayout>